<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.SettingsFragment">

    <LinearLayout
        android:id="@+id/llLanguageSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/language_settings" />

        <RadioGroup
            android:id="@+id/rgLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lngEnglish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/language_settings_first"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/lngFrench"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/language_setting_second"
                android:textSize="16sp" />


            <RadioButton
                android:id="@+id/lngGermany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/language_settings_third"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llDemonstrationSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLanguageSettings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/demonstration_settings_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/rgStyles"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/rbForeignFirst"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:checked="false"/>
                <RadioButton
                    android:id="@+id/rbRusFirst"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:checked="false"/>
            </RadioGroup>


            <LinearLayout
                android:id="@+id/cwSettings"
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <include
                    layout="@layout/foreign_first_cardview"
                    />
                <include
                    layout="@layout/russian_first_cardview"
                    />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>