<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:strokeColor="@color/grey"
    app:strokeWidth="1dp"
    android:layout_margin="5dp">
    <View
        android:id="@+id/indicator"
        android:tag="1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvVariantSecondUpperLeft"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeMaxTextSize="30sp"
                android:layout_margin="10dp"
                android:text="@string/russian_first_left_upper_text"
                android:textColor="@android:color/holo_blue_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle_vertical"
                app:layout_constraintBottom_toBottomOf="@id/guideline_middle_horizontal"
                />

            <TextView
                android:id="@+id/tvVariantSecondLowerLeft"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeStepGranularity="1sp"
                android:layout_margin="10dp"
                android:text="@string/russian_first_left_lower"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_middle_horizontal"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/tv_request_time"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/russian_first_right"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeStepGranularity="1sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_middle_vertical"
                app:layout_constraintBottom_toBottomOf="@id/guideline_middle_horizontal"
                />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_middle_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_middle_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>